kubernetes/apps/media/tracearr/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tracearr
  annotations:
    gatus.home-operations.com/endpoint: |-
      group: internal
      dns:
        query-name: tracearr.unscfleet.com
        query-type: A
      url: 1.1.1.1
      conditions:
        - len([BODY]) == 0
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - tracearr.unscfleet.com
  rules:
    - backendRefs:
        - name: tracearr
          port: 3000
